--- a/privatechat/templates/room.html
+++ b/privatechat/templates/room.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -14,79 +15,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <style>
-    body {
-      margin: 0 auto;
-      max-width: 800px;
-      padding: 0 20px;
-    }
-
-    .container1 {
-      border: 2px solid #dedede;
-      background-color: #f1f1f1;
-      border-radius: 5px;
-      padding: 10px;
-      margin: 10px 0;
-    }
-
-    .darker {
-      border-color: #ccc;
-      background-color: #ddd;
-    }
-
-    .greener {
-      border-color: #98fb98;
-      background-color: #98ff98;
-    }
-
-    .container1::after {
-      content: "";
-      clear: both;
-      display: table;
-    }
-
-    .container1 img {
-      float: left;
-      max-width: 60px;
-      width: 100%;
-      margin-right: 20px;
-      border-radius: 50%;
-    }
-
-    .container1 img.right {
-      float: right;
-      margin-left: 20px;
-      margin-right: 0;
-    }
-
-    .time-right {
-      float: right;
-      color: #aaa;
-    }
-
-    .time-left {
-      float: left;
-      color: #999;
-    }
-
-    .sticky {
-      position: -webkit-sticky;
-      /* Safari */
-      position: sticky;
-      top: 0;
-      padding: 1px;
-      text-align: center;
-      margin-bottom: 10px;
-      background-color: rgb(189, 45, 158);
-      color: white;
-    }
-
-    div {
-      word-break: break-all;
-    }
-  </style>
+  
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/room.css' %}">
 </head>
 
 <body>
